--- a/frontend/my project/css/main_page.css
+++ b/frontend/my project/css/main_page.css
@@ -12,12 +12,12 @@ aside {
     margin-top: 20px;
 }
 
-.heading {
+h2.heading {
     font-weight: lighter;
-    font-size: 1.4em;
+    font-size: 1.6em;
     font-family: 'Sedgwick Ave', cursive;
     border-bottom: 2px solid #db6e6e;
-    float: left; 
+    float: left;
     /* float в данном случае укорачивает линии */
 
     color: #462f2f;
