--- a/frontend/my project/css/main_styles.css
+++ b/frontend/my project/css/main_styles.css
@@ -7,7 +7,7 @@ html {
 }
 body {
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
     background-color: rgb(0, 0, 0);
     color: #444;
     height: 2000px;
@@ -336,25 +336,4 @@ footer {
     #social {
         width: 100%;
     }
-}
-
-
-h2 {
-font-size: 1.75rem;
-}
-
-h3 {
-font-size: 1.35rem;
-}
-
-h4 {
-font-size: 1.1rem;
-}
-
-h5 {
-font-size: 0.9rem;
-}
-
-h6 {
-font-size: 0.7rem;
 }
