--- a/frontend/my project/css/main_page.css
+++ b/frontend/my project/css/main_page.css
@@ -1,31 +1,15 @@
-#main {
+#main_left {
     width: 60%;
     float: left;
     margin-top: 20px;
     margin-left: 3%;
 }
 
-aside {
+#main_right {
     width: 30%;
     float: left;
     margin-left: 2%;
     margin-top: 20px;
-}
-
-h2.heading {
-    font-weight: lighter;
-    font-size: 1.6em;
-    font-family: 'Sedgwick Ave', cursive;
-    border-bottom: 2px solid #db6e6e;
-    float: left;
-    /* float в данном случае укорачивает линии */
-
-    color: #462f2f;
-    padding: 0px 5px;
-}
-
-.heading:first-letter {
-    color: #db6e6e;
 }
 
 .article {
