--- a/frontend/my project/css/basic.css
+++ b/frontend/my project/css/basic.css
@@ -8,7 +8,7 @@ html {
 body {
     width: 100%;
     /*height: 100%;*/
-    background-color: rgb(0, 0, 0);
+    background-color: whitesmoke;
     color: #444;
     height: 2000px;
     /* background: url("../images/background.png"); */
@@ -17,7 +17,7 @@ body {
 
 .background {
     content: "";
-    background: url("../images/background.png");
+    /*background: url("../images/background.png");*/
     width: 100%;
     height: 100%;
     opacity: 0.4;
