--- a/frontend/my project/css/basic.css
+++ b/frontend/my project/css/basic.css
@@ -11,6 +11,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: black;
+    font-size: 1.0em;
     /*color: white;*/
     /*height: 2000px;*/
     font-family: Domine, sans-serif;
@@ -38,6 +39,7 @@ body {
 a {
     color: #FFFFFF;
     font-family: 'Berkshire Swash', cursive;
+    font-size: 1.05em;
     text-decoration: none;
     transition: all.6s ease;
     -ms-transition: all.6s ease;
