--- a/frontend/my project/css/header_footer.css
+++ b/frontend/my project/css/header_footer.css
@@ -141,6 +141,47 @@ header #profile-nav {
     clear: both;
 }
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    background-color: rgba(0, 0, 0, 0.3);
+    display: none;
+    position: absolute;
+    font-size: 1.3em;
+    min-width: 160px;
+    font-family: 'Berkshire Swash', cursive;
+    z-index: 1;
+}
+
+.drop-btn {
+    color: #FFFFFF;
+    background-color: rgba(0, 0, 0, 0.0);
+    font-family: 'Berkshire Swash', cursive;
+    /*text-decoration: none;*/
+    font-size: 1.6em;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown-content a {
+    color: white;
+    /*background-color: rgba(0, 0, 0, 0.8);*/
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border-bottom: 5px;
+}
+
+.dropdown-content a:hover {background-color: rgba(235, 81, 81, 0.7);}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 #mobileMenu, #mobileMenuWithoutReg {
     font-size: 1.3em;
     padding-top: 20px;
