--- a/frontend/my project/css/basic.css
+++ b/frontend/my project/css/basic.css
@@ -12,7 +12,7 @@ body {
     height: 100%;
     background-color: black;
     font-size: 1.0em;
-    /*color: white;*/
+    color: white;
     /*height: 2000px;*/
     font-family: Domine, sans-serif;
 }
@@ -88,7 +88,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .heading {
     font-weight: lighter;
-    font-size: 1.6em;
+    font-size: 2.0em;
     border-bottom: 2px solid #db6e6e;
     float: left;
     /* float в данном случае укорачивает линии */
