registration not wodking but i well send query very close

--- a/frontend/project_react/my-app/src/App.css
+++ b/frontend/project_react/my-app/src/App.css
@@ -44,8 +44,7 @@ body {
 
 .background {
   content: "";
-  background: url("../public/images/background.png");
-  background-attachment: fixed;
+  background: url("../public/images/background.png") fixed no-repeat center;
   width: 100%;
   height: 100%;
   opacity: 0.4;
